fullSandbox11072023/force-app/main/default/objects/Pre_Call_Plan__c/Pre_Call_Plan__c.object-meta.xml
<CustomObject>
    <description>Pre Call Plan is used to prepare for upcoming calls and visits to Accounts</description>
    <label>Pre Call Plan</label>
    <nameField>
        <label>Pre Call Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pre Call Plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>