fullSandbox11072023/force-app/main/default/objects/Pre_Call_Plan__c/fields/CurrentProductusage__c.field-meta.xml
<CustomField>
    <fullName>CurrentProductusage__c</fullName>
    <label>Current Product usage?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>