fullSandbox11072023/force-app/main/default/objects/Pre_Call_Plan__c/fields/Doubleclickquestions__c.field-meta.xml
<CustomField>
    <fullName>Doubleclickquestions__c</fullName>
    <label>Double click questions?</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>