fullSandbox11072023/force-app/main/default/objects/Pre_Call_Plan__c/fields/Hospitalordepartmentprioritiesiniti__c.field-meta.xml
<CustomField>
    <fullName>Hospitalordepartmentprioritiesiniti__c</fullName>
    <inlineHelpText>Hospital or department priorities, initiatives?</inlineHelpText>
    <label>Hospital/Dept priorities, initiatives?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>