fullSandbox11072023/force-app/main/default/objects/Pre_Call_Plan__c/fields/Howdidthemeetingcomeabout__c.field-meta.xml
<CustomField>
    <fullName>Howdidthemeetingcomeabout__c</fullName>
    <label>How did the meeting come about?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Existing Business</fullName>
            </value>
            <value>
                <fullName>Scheduled Visit</fullName>
            </value>
            <value>
                <fullName>Sales Negotiation</fullName>
            </value>
            <value>
                <fullName>Contract Renewal</fullName>
            </value>
            <value>
                <fullName>Invitation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>