fullSandbox11072023/force-app/main/default/objects/Pre_Call_Plan__c/fields/Keypeopletotalkto__c.field-meta.xml
<CustomField>
    <fullName>Keypeopletotalkto__c</fullName>
    <label>Key people to talk to?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>