fullSandbox11072023/force-app/main/default/objects/Pre_Call_Plan__c/fields/PeopleWhatHIswillyouask__c.field-meta.xml
<CustomField>
    <fullName>PeopleWhatHIswillyouask__c</fullName>
    <inlineHelpText>(People) What high Impact questions will you ask?</inlineHelpText>
    <label>People:  What HI ?s will you ask?</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>