fullSandbox11072023/force-app/main/default/objects/Pre_Call_Plan__c/fields/PersonalWhathighImpctquestionswil__c.field-meta.xml
<CustomField>
    <fullName>PersonalWhathighImpctquestionswil__c</fullName>
    <inlineHelpText>(Personal) What high Impact questions will you ask?</inlineHelpText>
    <label>Personal: What HI ?s will you ask?</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>