fullSandbox11072023/force-app/main/default/objects/Pre_Call_Plan__c/fields/PossibleObjections__c.field-meta.xml
<CustomField>
    <fullName>PossibleObjections__c</fullName>
    <label>Possible Objections</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>