fullSandbox11072023/force-app/main/default/objects/Pre_Call_Plan__c/fields/Process_WhatHI_Qs_wil_You_Ask__c.field-meta.xml
<CustomField>
    <fullName>Process_WhatHI_Qs_wil_You_Ask__c</fullName>
    <inlineHelpText>(Process) What high Impact questions will you ask?</inlineHelpText>
    <label>Process: What HI ?s will you ask?</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>