fullSandbox11072023/force-app/main/default/objects/Pre_Call_Plan__c/fields/RSM__c.field-meta.xml
<CustomField>
    <fullName>RSM__c</fullName>
    <formula>CreatedBy.Manager_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RSM</label>
    <type>Text</type>
</CustomField>