fullSandbox11072023/force-app/main/default/objects/Pre_Call_Plan__c/fields/RSMComments__c.field-meta.xml
<CustomField>
    <fullName>RSMComments__c</fullName>
    <inlineHelpText>Meant for the RSM to provide feedback to MSR</inlineHelpText>
    <label>RSM Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>