fullSandbox11072023/force-app/main/default/objects/Pre_Call_Plan__c/fields/RSMEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>RSMEmailAddress__c</fullName>
    <label>RSM Email Address</label>
    <type>Email</type>
</CustomField>