fullSandbox11072023/force-app/main/default/objects/Pre_Call_Plan__c/fields/SendbacktoMSR__c.field-meta.xml
<CustomField>
    <fullName>SendbacktoMSR__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked will send email to MSR to review RSM&apos;s Comments</inlineHelpText>
    <label>Send back to MSR</label>
    <type>Checkbox</type>
</CustomField>