fullSandbox11072023/force-app/main/default/objects/Pre_Call_Plan__c/fields/SendEmailtoRSMforReview__c.field-meta.xml
<CustomField>
    <fullName>SendEmailtoRSMforReview__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This will trigger an email to be sent to your RSM in order to review you Pre Call Plan</inlineHelpText>
    <label>Send Email to RSM for Review</label>
    <type>Checkbox</type>
</CustomField>