fullSandbox11072023/force-app/main/default/objects/Pre_Call_Plan__c/fields/Whatactionwouldyoulikethecustomer__c.field-meta.xml
<CustomField>
    <fullName>Whatactionwouldyoulikethecustomer__c</fullName>
    <inlineHelpText>What action would you like the customer to take?</inlineHelpText>
    <label>What action would you like the cust...</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>