fullSandbox11072023/force-app/main/default/objects/Pre_Call_Plan__c/fields/Whatarethepotentialneeds__c.field-meta.xml
<CustomField>
    <fullName>Whatarethepotentialneeds__c</fullName>
    <label>What are the potential needs?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>