fullSandbox11072023/force-app/main/default/objects/Pre_Call_Plan__c/fields/WhatistheirareaofISR__c.field-meta.xml
<CustomField>
    <fullName>WhatistheirareaofISR__c</fullName>
    <inlineHelpText>What is their area of Interest/Speciality/Role?</inlineHelpText>
    <label>What is their area of I/S/R?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>