fullSandbox11072023/force-app/main/default/objects/Pre_Call_Plan__c/fields/Whatoutcomeareyoulookingfor__c.field-meta.xml
<CustomField>
    <fullName>Whatoutcomeareyoulookingfor__c</fullName>
    <label>What outcome are you looking for?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>