fullSandbox11072023/force-app/main/default/objects/Pre_Call_Plan__c/fields/Whatwillbeyourengagestatement__c.field-meta.xml
<CustomField>
    <fullName>Whatwillbeyourengagestatement__c</fullName>
    <inlineHelpText>Insight (knowledge of their business you&apos;d like to explore); 
Agenda (…to ask questions/learn more about..); 
Outcome (value to the customer)</inlineHelpText>
    <label>What will be your engage statement?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>