fullSandbox11072023/force-app/main/default/objects/Pre_Call_Plan__c/recordTypes/All_BUs_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>All_BUs_Record_Type</fullName>
    <active>true</active>
    <label>All BU&apos;s Record Type</label>
</RecordType>