fullSandbox11072023/force-app/main/default/objects/Pre_Call_Plan__c/listViews/Pre_Call_Plans_I_d_like_to_email_to_RSM.listView-meta.xml
<ListView>
    <fullName>Pre_Call_Plans_I_d_like_to_email_to_RSM</fullName>
    <columns>NAME</columns>
    <columns>SendEmailtoRSMforReview__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Pre_Call_Plan__c.All_BUs_Record_Type</value>
    </filters>
    <label>Recent Pre Call Plans that need an email</label>
</ListView>